# cvr

./: .gitignore  README.md  pyproject.toml  sh -o BatchMode=yes -o StrictHostKeyChecking=accept-new -T git@github.com
app/: __init__.py  agent_loop.py  alignment_suite.py  artifacts.py  avigate_agent.py  avigate_official.py  bandit_data.py  build_feature_dir.py  compare_msrvtt.py  config.py  demo.py  eval.py  export_bandit_data.py  msrvtt_retrieval.py  msrvtt_t2v_suite.py  omni_checker.py  paper_metrics.py  prepare_msrvtt_replay.py  retrieval_types.py  retriever.py  schemas.py  simple_tool_demo.py  validate_data.py
app/avigate_vendor/: file_utils.py  modeling.py  module_clip.py  module_cross.py  until_module.py
app/backends/: __init__.py  base.py  file_backend.py  mock_backend.py
app/controller/: __init__.py  openai_responses.py  scripted.py
app/tools/: __init__.py  session.py
configs/: real.yaml
data/mock/: candidates.json  queries.json
data/real_sample/: candidates.json  queries.json  retrieval_scores.json
tests/: __init__.py  test_agent_loop.py  test_artifacts_and_compare.py  test_avigate_agent.py  test_avigate_official.py  test_bandit_data.py  test_build_feature_dir.py  test_compare_msrvtt.py  test_file_backend_formats.py  test_mock_loop.py  test_msrvtt_retrieval.py  test_msrvtt_t2v_suite.py  test_omni_checker.py  test_prepare_msrvtt_replay.py  test_real_backend.py  test_retriever.py  test_schemas.py  test_simple_tool_demo.py
