[project]
name = "reflective-cvr-agent"
version = "0.1.0"
description = "Training-free function-calling agent demo for audio-visual composed video retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.21.0",
  "PyYAML>=6.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

